--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "build": "rimraf out && tsc",
         "build-test-app": "cd test-app && npx bsc",
-        "lint": "eslint \"src/**\"",
+        "lint": "eslint",
         "preversion": "npm run build && npm run lint && npm run test",
         "test": "nyc mocha",
         "watch": "rimraf out && tsc --watch"
@@ -29,6 +29,9 @@
         "@types/sinon": "^9.0.4",
         "chai": "^4.2.0",
         "eslint": "^8.16.0",
+        "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jsdoc": "^39.3.6",
         "eslint-plugin-no-only-tests": "2.6.0",
         "fs-extra": "^11.2.0",
         "mocha": "^9.1.3",
