--- a/package.json
+++ b/package.json
@@ -42,10 +42,8 @@
         "typescript": "^5.6.3",
         "undent": "^0.1.0"
     },
-    "peerDependencies": {
-        "brighterscript": "^1.0.0-alpha.41"
-    },
     "dependencies": {
+        "brighterscript": "^1.0.0-alpha.41",
         "dotenv": "^16.4.5"
     },
     "mocha": {
