--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,23 @@
 {
     "compilerOptions": {
-        "outDir": "./dist",
-        "allowJs": false,
+        "noImplicitAny": false,
+        "target": "ES2017",
         "module": "commonjs",
-        "target": "es6",
-        "lib": ["esnext"],
         "sourceMap": true,
+        "rootDir": "src",
+        "outDir": "dist",
+        "declaration": true,
+        "strict": true,
+        "strictNullChecks": false,
+        "forceConsistentCasingInFileNames": true,
+        "preserveConstEnums": true,
         "downlevelIteration": true,
-        "incremental": true,
-        "resolveJsonModule": true,
-        "esModuleInterop": true,
+        "noUnusedLocals": true,
         "allowSyntheticDefaultImports": true,
-        "strictNullChecks": true
+        "lib": ["es2017", "es2019.array"]
     },
     "include": ["src/**/*.ts"],
+    "exclude": ["node_modules/**/*"],
     "ts-node": {
         "transpileOnly": true
     }
